# Team6

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  wg-graph.sln
res/Game/: textures.cfg
src/: ClassDefines.h  CoordsCalculator.h  CoordsHolder.h  Events.h  Game.cpp  Game.h  GameData.cpp  GameData.h  GameList.h  GameState.h  KKSCoordsCalculator.cpp  KKSCoordsCalculator.h  Logging.h  Main.cpp  TextureManager.h  Types.h  Utilities.h  Window.h  bincharstream.h  binstream.h  game.h  game_connector.h  game_data.h  game_drawer.h  game_solver.h  graph.h  graph_t.h  json-parser.h  json_parser.cpp  lobby.h  main.cpp  packet-parser.cpp  packet-parser.h  render.h  src.vcxproj  src.vcxproj.filters  test.cpp  textures.cfg
src/Game/: Game.cpp  Game.h
src/Window/: Window.cpp  Window.h
src/game/: connector.h  controller.h  data.h  drawer.h  game.h  solver.h
src/game/data/: base_json_encodable.h  event.h  player.h  post.h  train.h
src/game/solver/: RouteManager.h  collisions_checker.h  dispatcher.h  graph.h  graph_edge.h  path.h  solver.h  train.h
src/game/solver/executor/: executor.cpp  executor.h
src/game/solver/task/: BringToTown.cpp  BringToTown.h  TakeArmor.cpp  TakeArmor.h  TakeProduct.cpp  TakeProduct.h  UpgradeTown.cpp  UpgradeTown.h  UpgradeTrain.cpp  UpgradeTrain.h  empty.cpp  empty.h  task.cpp  task.h
src/globals/: drawer.h  working_directory.h
src/graph/: CoordsCalculator.h  CoordsHolder.h  GraphEdgeMap.h  GraphVertexMap.h  KKSCoordsCalculator.h  graph.h  readable_only_pmap.h
src/lobby/: data.h
src/network/: game_connector.h  server_connector.h  tcp_connector.h
src/render/: DrawerController.h  ResourceManager.h  SpriteUtils.h  TextureManager.h  Window.cpp  drawer.h  game_drawer.h  textures.cfg
src/render/drawer/: GameDrawer.h  InterfaceDrawer.h
src/utils/: ClassDefines.h  Logging.h  Math.h  MinMax.h  bincharstream.h  binstream.h  property_map_holder.h  ptr_container.h  value_map.h
src/utils/graph/: CoordsCalculator.h  graph.h
src/utils/network/: server_connector.h  tcp_connector.h
